# ImageFeatureDetector

./: .clang-format  .clang-tidy  .dir-locals.el  .gitignore  CMakeLists.txt  CMakeLists.txt.user.20  CMakeLists.txt.user.5abeeb8.4.8-pre1  CMakeLists.txt.user.621bdef  CMakeLists.txt.user.9bfbb9d  CMakeSettings.json  README.md  Release  clang-tidy.cmake  compile_commands.json  cppcheck.cmake  resources.qrc  run-clang-tidy.py  test
lib/: README
lib/MacOS/: libnmengine.1.0.2.dylib  libnmengine.2.0.0.dylib
lib/linux.x64/: libnmengine.so.1.0.2  libnmengine.so.2.0.0
lib/rpi/: libnmengine.so.1.0.2  libnmengine.so.2.0.0
src/: Frame.h  Frame.hpp  NeuroMemEngine.h  NeuroMemEngine.hpp  Section.cpp  Section.h  ds.cpp  ds.h  ds.hpp  fireBehaviorDetection.cpp  fireBehaviorDetection.h  fireBehaviorDetection.hpp  fire_detector.cpp  fire_detector.h  fire_detector.hpp  main.cpp  motionCapture.cpp  motionCapture.h  motionCapture.hpp  motionDetection.cpp  motionDetection.h  motionDetectionV1.cpp  motionDetectionV1.h  nm_classifier.cpp  nm_classifier.h  nm_classifier.hpp  nm_detector.cpp  nm_detector.h  nm_detector.hpp  nmengine.h  nmengine.hpp  ocv_main.cpp  opencvhelper.cpp  opencvhelper.h  opencvhelper.hpp  videolabelview.cpp  videolabelview.hpp  vlccap.cpp  vlccap.h  vlccap.hpp  (+23 more)
ui/: barFeaturesFast.ui  barFeaturesHarris.ui  barFeaturesSift.ui  barFeaturesSurf.ui  windowAbout.ui  windowCaptureWebcam.ui  windowDo4.ui  windowFastRealTime.ui  windowMain.ui  windowPreferences.ui  windowStartup.ui
